--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  line_icons: ^0.2.0
-  imei_plugin: ^1.2.0
-
 
 dev_dependencies:
   flutter_test:
@@ -48,8 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-  - assets/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
